--- a/src/main/resources/static/client/index.html
+++ b/src/main/resources/static/client/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/login.css">
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.15/angular.js"></script>
@@ -13,6 +14,11 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.15/angular-messages.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/datePickerConfig.js"></script>
+    <script src="js/joggingController.js"></script>
+    <script src="js/loginController.js"></script>
+    <script src="js/registrationController.js"></script>
+    <script src="js/sessionService.js"></script>
 </head>
 <body ng-app="joggingApp">
 <div ng-view=""/>
