--- a/src/main/resources/static/client/dev.index.html
+++ b/src/main/resources/static/client/dev.index.html
@@ -13,7 +13,12 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.15/angular-route.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.15/angular-messages.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
-    <script src="js/app.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/datePickerConfig.js"></script>
+    <script src="js/joggingController.js"></script>
+    <script src="js/loginController.js"></script>
+    <script src="js/registrationController.js"></script>
+    <script src="js/sessionService.js"></script>
 </head>
 <body ng-app="joggingApp">
 <div ng-view=""/>
